backend/auth/tests/functional/utils/errors/role.py
class RolesError:
    ALREADY_EXISTS = 'Роль уже существует.'
    NOT_EXISTS = 'Роль не существует.'
    NOT_BELONG = 'Разрешение не принадлежит роли.'
